--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <h2>Products</h2>
-<div *ngFor="let product of products">
+<div *ngFor="let product of products; index as productId">
   <h3>
-    <a [title]="product.name + ' details'">
+    <a [title]="product.name + ' details'" [routerLink]="['/products',productId]">
       {{product.name}}
     </a>
   </h3>
@@ -13,5 +13,5 @@
   <button (click)="share()">
     Share
   </button>
-  <app-product-alerts [product]="product" (notify) = "onNotify()"></app-product-alerts>
+  <app-product-alerts [product]="product" (notify)="onNotify()"></app-product-alerts>
 </div>
